--- a/Desk/assets/css/main.css
+++ b/Desk/assets/css/main.css
@@ -893,7 +893,7 @@
   font-size: 0.28125rem;
   line-height: 0.3125rem;
   text-align: left;
-  width: 3.265625rem;
+  width: 3.65625rem;
 }
 .div1.fly-birds-page_eb4c1f3c33 .div66 .div68 .div70 {
   align-items: flex-start;
@@ -1055,7 +1055,7 @@
   font-size: 0.28125rem;
   line-height: 0.3125rem;
   text-align: left;
-  width: 2.824219rem;
+  width: 3.5rem;
 }
 .div1.fly-birds-page_eb4c1f3c33 .div78 .div80 .div83 {
   align-items: flex-start;
@@ -1639,8 +1639,7 @@
   min-height: 0.113281rem;
   width: 0.882813rem;
 }
-.div1.fly-birds-page_eb4c1f3c33
-  .div103
+.div1.fly-birds-page_eb4c1f3c33 .div103
   .div108
   .div120
   .div122
@@ -1650,7 +1649,7 @@
   font-size: 0.117188rem;
   line-height: 0.199219rem;
   text-align: left;
-  width: 0.949219rem;
+  width: 1.949219rem;
 }
 .div1.fly-birds-page_eb4c1f3c33 .div125 {
   align-items: flex-start;
@@ -1697,7 +1696,7 @@
   font-size: 0.28125rem;
   line-height: 0.3125rem;
   text-align: left;
-  width: 2.808594rem;
+  width: 2.998594rem;
 }
 .div1.fly-birds-page_eb4c1f3c33 .div125 .div127 .div129 {
   align-items: flex-start;
@@ -1950,7 +1949,7 @@
   font-size: 0.28125rem;
   line-height: 0.3125rem;
   text-align: left;
-  width: 3.265625rem;
+  width: 3.65625rem;
 }
 .div1.fly-birds-page_eb4c1f3c33 .div143 .div145 .div147 {
   align-items: flex-start;
@@ -2010,7 +2009,7 @@
   font-size: 0.28125rem;
   line-height: 0.3125rem;
   text-align: left;
-  width: 3.265625rem;
+  width: 3.965625rem;
 }
 .div1.fly-birds-page_eb4c1f3c33 .div148 .div150 .div152 {
   align-items: flex-end;
